--- a/.harness/templates/publish_early_access_to_pypi_or_testpypi.yaml
+++ b/.harness/templates/publish_early_access_to_pypi_or_testpypi.yaml
@@ -1,5 +1,5 @@
 template:
-  name: Publish Early Access to Pypi or TestPypi
+  name: Publish Release or Early Access to Pypi or TestPypi
   identifier: publish_early_access_to_pypi_or_testpypi
   versionLabel: "1"
   type: Stage
