--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,7 @@
 *                                                        @datarobot/machine-learning-development
 /datarobot_provider/operators/ai_catalog.py              @datarobot/mldata
 /datarobot_provider/operators/connections.py             @datarobot/mldata
+/datarobot_provider/operators/deployment.py              @datarobot/model-management
 /datarobot_provider/operators/feature_discovery.py       @datarobot/mldata
 /datarobot_provider/operators/mlops.py                   @datarobot/model-management
 /datarobot_provider/operators/model_insights.py          @datarobot/trust-explainable-ai
