--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -200,7 +200,7 @@ pipeline:
                       identifier: run_build_and_test_astro_environment
                       spec:
                         connectorRef: account.dockerhub_datarobot_read
-                        image: python:3.12
+                        image: alpine:3.21
                         shell: Bash
                         command: |-
                           set -exuo pipefail
