--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -205,7 +205,7 @@ pipeline:
                         command: |-
                           set -exuo pipefail
                           apt-get update
-                          echo "y" > apt-get install sudo docker.io
+                          apt-get -y install sudo docker.io
                           make test-development-container
                         resources:
                           limits:
