--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -200,14 +200,15 @@ pipeline:
                       identifier: run_build_and_test_astro_environment
                       spec:
                         connectorRef: account.dockerhub_datarobot_read
-                        image: python:3.12
+                        image: docker
                         shell: Bash
                         command: |-
                           set -exuo pipefail
                           apt-get update
                           apt-get -y install sudo docker.io
                           sudo systemctl start docker
-                          make test-development-container
+                          make install-astro
+                          make create-astro-dev
                         resources:
                           limits:
                             memory: 1Gi
