--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -204,6 +204,7 @@ pipeline:
                         shell: Bash
                         command: |-
                           set -exuo pipefail
+                          apk update && apk add bash
                           make install-astro
                           make create-astro-dev
                         resources:
