--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -200,13 +200,13 @@ pipeline:
                       identifier: run_build_and_test_astro_environment
                       spec:
                         connectorRef: account.dockerhub_datarobot_read
-                        image: docker
+                        image: alpine:3.21
                         shell: Bash
                         command: |-
                           set -exuo pipefail
                           apk update && apk add bash
                           make install-astro
-                          make create-astro-dev
+                          # make create-astro-dev
                         resources:
                           limits:
                             memory: 1Gi
