--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -208,7 +208,8 @@ pipeline:
                           set -exuo pipefail
                           ## Setup container environment
                           apk update
-                          apk add sudo make bash curl python3 python3-pip
+                          apk add sudo make bash curl python3
                           # Run testing
                           make install-astro
                           make create-astro-dev
+                          make build-astro-dev
