--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -208,7 +208,8 @@ pipeline:
                           set -exuo pipefail
                           ## Setup container environment
                           apk update
-                          apk add sudo make bash curl python3 py3-pip
+                          apk add sudo make bash curl
+                          apk add python3 py3-pip py3-build
                           # Run testing
                           make install-astro
                           make create-astro-dev
