--- a/.harness/release_pypi.yaml
+++ b/.harness/release_pypi.yaml
@@ -49,6 +49,19 @@ pipeline:
                     isAutoRejectEnabled: false
                     approverInputs: []
         tags: {}
+    - stage:
+        name: Publish Release to Pypi
+        identifier: Publish_Release_to_Pypi
+        template:
+          templateRef: publish_early_access_to_pypi_or_testpypi
+          versionLabel: "1"
+          templateInputs:
+            type: CI
+            variables:
+              - name: BUILD_TYPE
+                type: String
+                default: test-early-access
+                value: pypi
   properties:
     ci:
       codebase:
