--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,15 +8,15 @@ version: 2
 build:
   os: ubuntu-24.04
   tools:
-    python: "3.13"
+    python: "3.12"
 
-# Build documentation with Mkdocs
-mkdocs:
-   configuration: mkdocs.yml
+python:
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
 
-# Optionally, but recommended,
-# declare the Python requirements required to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
+# Build documentation in the docs/ directory with Sphinx
+sphinx:
+  configuration: docs/conf.py
