Update template Publish Release or Early Access to Pypi or TestPypi

--- a/.harness/templates/publish_early_access_to_pypi_or_testpypi.yaml
+++ b/.harness/templates/publish_early_access_to_pypi_or_testpypi.yaml
@@ -118,4 +118,4 @@ template:
         default: test-early-access
         description: ""
         required: true
-        value: <+input>.default(test-early-access).allowedValues(test,early-access,pypi,test-early-access)
+        value: <+input>.default(test-early-access).allowedValues(release-mainline,release-early-access,test-mainline,test-early-access)
