--- a/.harness/build_and_publish_early_access_pypi.yaml
+++ b/.harness/build_and_publish_early_access_pypi.yaml
@@ -23,7 +23,7 @@ pipeline:
               - name: BUILD_TYPE
                 type: String
                 default: release-early-access-test-pypi
-                value: <+input>.default(release-early-access-test-pypi).allowedValues(release-mainline-pypi,release-early-access-pypi,release-mainline-test-pypi,release-early-access-test-pypi)
+                value: release-early-access-test-pypi
   properties:
     ci:
       codebase:
