[MLDEV-1239] Update release pipelines for pypi and early-access pypi to have valid tokens (#173)

--- a/.harness/build_and_publish_early_access_pypi.yaml
+++ b/.harness/build_and_publish_early_access_pypi.yaml
@@ -22,8 +22,8 @@ pipeline:
             variables:
               - name: BUILD_TYPE
                 type: String
-                default: test-early-access
-                value: test-early-access
+                default: release-early-access-test-pypi
+                value: release-early-access-test-pypi
   properties:
     ci:
       codebase:
