--- a/.harness/release_early_access_pypi.yaml
+++ b/.harness/release_early_access_pypi.yaml
@@ -20,8 +20,8 @@ pipeline:
             variables:
               - name: BUILD_TYPE
                 type: String
-                default: test-early-access
-                value: early-access
+                default: release-early-access-test-pypi
+                value: release-early-access-pypi
   identifier: releaseearlyaccesspypi
   name: release-early-access-pypi
   properties:
