[MLDEV-1131] Update early-access version to have a slightly altered dunder intit file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,6 @@ pretty = true
 [[tool.mypy.overrides]]
 module = [
     "datarobot_provider.autogen.*",
-    "datarobot_provider._experimental.example_dags.*"
+    "datarobot_provider._experimental.deprecated_example_dags.*"
 ]
 ignore_errors = true
