--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -97,51 +97,10 @@ pipeline:
         - stage:
             name: Unit tests
             identifier: test_unit
-            description: ""
-            type: CI
-            spec:
-              cloneCodebase: true
-              infrastructure:
-                type: KubernetesDirect
-                spec:
-                  connectorRef: account.cigeneral
-                  namespace: harness-delegate-ng
-                  automountServiceAccountToken: true
-                  nodeSelector: {}
-                  os: Linux
-              execution:
-                steps:
-                  - step:
-                      type: Run
-                      name: run unit tests
-                      identifier: run_unit_tests
-                      spec:
-                        connectorRef: account.dockerhub_datarobot_read
-                        image: python:<+matrix.python_version>
-                        shell: Bash
-                        command: |-
-                          set -exuo pipefail
-                          make req-dev
-                          airflow db init
-                          airflow db check
-                          make test-harness
-                        reports:
-                          type: JUnit
-                          spec:
-                            paths:
-                              - /harness/unit_test_report.xml
-                        resources:
-                          limits:
-                            memory: 1Gi
-                            cpu: "1.5"
-                      strategy:
-                        matrix:
-                          python_version:
-                            - "3.9"
-                            - "3.10"
-                            - "3.11"
-                            - "3.12"
-                          nodeName: <+matrix.python_version>
+            template:
+              templateRef: unit_tests
+              versionLabel: "1"
+              gitBranch: mattn/MODEL-18049-update-ea-pipeline
         - stage:
             name: Build docs tests
             identifier: test_build_docs
