--- a/.harness/release_early_access_pypi.yaml
+++ b/.harness/release_early_access_pypi.yaml
@@ -3,12 +3,19 @@ pipeline:
   orgIdentifier: AGENTS
   tags: {}
   stages:
-    - stage:
-        name: Lint
-        identifier: Lint
-        template:
-          templateRef: Lint_Repo
-          versionLabel: "1"
+    - parallel:
+        - stage:
+            name: Lint
+            identifier: Lint
+            template:
+              templateRef: Lint_Repo
+              versionLabel: "1"
+        - stage:
+            name: Unit Tests
+            identifier: Unit_Tests
+            template:
+              templateRef: unit_tests
+              versionLabel: "1"
     - stage:
         name: Publish to Pypi
         identifier: Publish_to_Pypi
@@ -22,6 +29,19 @@ pipeline:
                 type: String
                 default: release-early-access-test-pypi
                 value: release-early-access-pypi
+    - stage:
+        name: Publish to Test Pypi
+        identifier: Publish_to_Test_Pypi
+        template:
+          templateRef: publish_early_access_to_pypi_or_testpypi
+          versionLabel: "1"
+          templateInputs:
+            type: CI
+            variables:
+              - name: BUILD_TYPE
+                type: String
+                default: release-early-access-test-pypi
+                value: release-early-access-test-pypi
   identifier: releaseearlyaccesspypi
   name: release-early-access-pypi
   properties:
