--- a/.harness/release_early_access_pypi.yaml
+++ b/.harness/release_early_access_pypi.yaml
@@ -3,12 +3,32 @@ pipeline:
   orgIdentifier: AGENTS
   tags: {}
   stages:
+    - parallel:
+        - stage:
+            name: Lint
+            identifier: Lint
+            template:
+              templateRef: Lint_Repo
+              versionLabel: "1"
+        - stage:
+            name: Unit Tests
+            identifier: Unit_Tests
+            template:
+              templateRef: unit_tests
+              versionLabel: "1"
     - stage:
-        name: Lint
-        identifier: Lint
+        name: Publish to Test Pypi
+        identifier: Publish_to_Test_Pypi
         template:
-          templateRef: Lint_Repo
+          templateRef: publish_early_access_to_pypi_or_testpypi
           versionLabel: "1"
+          templateInputs:
+            type: CI
+            variables:
+              - name: BUILD_TYPE
+                type: String
+                default: release-early-access-test-pypi
+                value: release-early-access-test-pypi
     - stage:
         name: Publish to Pypi
         identifier: Publish_to_Pypi
